syntax = "proto2";
package buffers;

import "google/protobuf/descriptor.proto";
extend google.protobuf.FieldOptions {
  optional int32 id_start = 50000;
  optional bool file_path = 50001;
  optional string gmx = 50002;
  optional string gmx_id = 50003;
  optional string yyp = 50004;
}
